✨ feat(我的): 实现导航逻辑

--- a/miniprogram/pages/profile/index.wxml
+++ b/miniprogram/pages/profile/index.wxml
@@ -1,5 +1,5 @@
 <!--pages/profile/index.wxml-->
-<view class="profile-page">
+<view class="profile-page" bindlongpress="onLongPress">
   <!-- Loading State -->
   <view wx:if="{{pageLoading}}" class="loading-container">
     <view class="loading-skeleton">
