🐞 fix: 修复一系列报错

--- a/miniprogram/components/product-card/index.scss
+++ b/miniprogram/components/product-card/index.scss
@@ -224,6 +224,7 @@
 
   // 按钮文字
   .btn-text {
+    line-height: 1px;
     transition: opacity $transition-duration-base $transition-timing-function;
 
     .loading & {
